--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -6,11 +6,11 @@ ko:
   chineses: '汉语'
   english: 'english'
 
-  site_url: 'shopping.sleepinglion.pe.kr'
-  site_full_url: 'https://shopping.sleepinglion.pe.kr'
+  site_url: 'www.utext.kr'
+  site_full_url: 'http://www.utext.kr'
   email_webmaster: 'admin@shopping.sleepinglion.pe.kr'
-  meta_description: '최고의 온라인 마스크 판매 사이트'
-  meta_keywords: '마스크,mask,마스크 구입,개인 마스크,프린트 마스크'
+  meta_description: ''
+  meta_keywords: ''
   title_separator: '::'
 
   search : "검색"
@@ -38,6 +38,7 @@ ko:
   manage : "관리"
   image : "이미지"
   check : "선택"
+  setting : '설정'
   transaction_date: '거래일'
 
   add_order : "주문추가"
@@ -98,7 +99,7 @@ ko:
   there_are_n_branches : "지점이 <strong class=\"mark\">%{count}개</strong> 있습니다"
   there_are_n_users : "사용자가 <strong class=\"mark\">%{count}명</strong> 있습니다"
   there_are_n_reservations : "예약이 <strong class=\"mark\">%{count}개</strong> 있습니다"
-  there_are_n_operators : "관리자가 <strong class=\"mark\">%{count}명</strong> 있습니다"
+  there_are_n_operators : "직원이 <strong class=\"mark\">%{count}명</strong> 있습니다"
   there_are_n_receipts : "영수증이 <strong class=\"mark\">%{count}개</strong> 있습니다"
 
   success_title : '처리되었습니다'
@@ -427,6 +428,7 @@ ko:
       branch :
         title : '지점명'
         description : '설명'
+        orders_count : '주문수'
         enable : '보임'
         updated_at : '수정일'
         created_at : '작성일'
@@ -457,6 +459,7 @@ ko:
         picture : '이미지'
       receipt :
         title : '제목'
+        orders_count : '주문수'
         enable: '활성'
         updated_at: '수정일'
         created_at: '작성일'
